# Analiza

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: augment_data.py  evaluate.py  evaluate_resnet.py  evaluate_yolo.py  prepare_data.py  train_resnet.py  train_yolo.py
src/coal_classification/: __init__.py  data.py  metrics.py  resnet.py  yolo.py
